--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://portfolio.ryanreymorris.tech/",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
     "vite": "^6.3.5"
